# college-CS

./: .gitattributes  .gitignore  README.md  readme.md
semester-2/R/: .gitignore
semester-2/R/Lab_R/: .RData  Ankieta.rdata  Ankieta.xlsx  Kol.R  Lab_1.R  Lab_2.R  Lab_3.R  kk.R  kol2_test1.R  kol2_test2.R  kolokwium2.R  korelacja_wyklad.R  lab_10.R  lab_11.R  lab_12.R  lab_4.R  lab_5.R  lab_6.R  lab_7.R  lab_8.R  lab_9.R  test.R
semester-2/lab4_new/: CMakeLists.txt
semester-2/lab4_new/Forest/: CMakeLists.txt  Forest.cpp  Forest.hpp
semester-2/lab4_new/Tree/: Tree.cpp  Tree.hpp
semester-2/programming/labs/lab4/: CMakeLists.txt  main.cpp
semester-2/programming/labs/lab4/Forest/: Forest.cpp  Forest.hpp
semester-2/programming/labs/lab4/Tree/: CMakeLists.txt  Tree.cpp  Tree.hpp
semester-2/programming/labs/lab4/Tree_old/: Tree_old.hpp
semester-2/programming/labs/lab6_lab4/: CMakeLists.txt  main.cpp
semester-2/programming/labs/lab6_lab4/Border/: Border.cpp  Border.hpp
semester-2/programming/labs/lab6_lab4/Forest/: CMakeLists.txt  Forest.cpp  Forest.hpp
semester-2/programming/labs/lab6_lab4/Rectangle/: CMakeLists.txt  Rectangle.hpp
semester-2/programming/labs/lab6_lab4/RightTriangle/: CMakeLists.txt  RightTriangle.cpp  RightTriangle.hpp
semester-2/programming/labs/lab6_lab4/Shape/: CMakeLists.txt
semester-2/programming/labs/lab6_lab4/Tree/: CMakeLists.txt  Tree.cpp  Tree.hpp
semester-2/programming/labs/lab6_lab4/Tree_old/: CMakeLists.txt  Tree_old.cpp
semester-2/programming/labs/lab6_lab4/Triangle/: Triangle.hpp
semester-2/programming/labs/zad2_Wheel-Game/: CMakeLists.txt
semester-2/programming/labs/zad2_Wheel-Game/Game/: Game.cpp  Game.hpp
semester-2/programming/labs/zad2_Wheel-Game/Player/: CMakeLists.txt  Player.cpp
semester-2/programming/labs/zad4_wheelgame_operator_overloading/: CMakeLists.txt  main.cpp  readme.md
semester-2/programming/labs/zad4_wheelgame_operator_overloading/Game/: CMakeLists.txt  Game.cpp  Game.hpp
semester-2/programming/labs/zad4_wheelgame_operator_overloading/Player/: CMakeLists.txt  Player.cpp  Player.hpp
semester-2/programming/labs/zad4_wheelgame_operator_overloading/Wheel/: CMakeLists.txt  Wheel.cpp  Wheel.hpp
semester-2/programming/labs/zad7_mandelbrot_set/: CMakeLists.txt  Fractal.cpp  Fractal.hpp  main.cpp
semester-2/programming/labs/zad8_battleship_game/: CMakeLists.txt  main.cpp  readme.md
semester-2/programming/labs/zad8_battleship_game/Board/: Board.cpp  Board.hpp  CMakeLists.txt
semester-2/programming/labs/zad8_battleship_game/Computer/: CMakeLists.txt  Computer.cpp  Computer.hpp
semester-2/programming/labs/zad8_battleship_game/Game/: CMakeLists.txt  Coordinates.cpp  Coordinates.hpp  Game.cpp  Game.hpp
semester-2/programming/labs/zad8_battleship_game/Player/: CMakeLists.txt  Player.cpp  Player.hpp
semester-2/programming/labs/zad8_battleship_game/Ships/: CMakeLists.txt  Ship.cpp  Ship.hpp  ShipManager.cpp  ShipManager.hpp
semester-2/verilog/kolokwium2/: GenSignal.v  GenSignal_mROM.v  przebieg_1.v  przebieg_3.v  test  test2  test3  zad_1.v  zad_2.v
semester-2/verilog/kolowkium1/: behawiralny.v  behawiralny_stx_beh.prj  behawiralny_summary.html  behawiralny_tb.v  behawiralny_tb_beh.prj  behawiralny_tb_isim_beh.wdb  behawiralny_tb_isim_beh3.wdb  behawiralny_tb_stx_beh.prj  behiwiralny_sch.jhd  behiwiralny_sch.sch  behiwiralny_sch.schlog  behiwiralny_sch.vf  behiwiralny_sch_behiwiralny_sch_sch_tb_isim_beh.wdb  behiwiralny_sch_behiwiralny_sch_sch_tb_stx_beh.prj  behiwiralny_sch_tb.v  fuse.xmsgs  fuseRelaunch.cmd  kolowkium1.gise  kolowkium1.xise  mux8na1.v  mux8na1_sch.jhd  mux8na1_sch.sch  mux8na1_sch.vf  mux8na1_sch_mux8na1_sch_sch_tb_isim_beh2.wdb  mux8na1_sch_mux8na1_sch_sch_tb_stx_beh.prj  mux8na1_sch_tb.v  strukturalny.prj  strukturalny.stx  strukturalny.v  strukturalny.xst  strukturalny_tb.v  strukturalny_tb_isim_beh1.wdb  strukturalny_tb_stx_beh.prj
semester-2/verilog/lab5/: Arithmetic2BitsMUL_sch.jhd  Arithmetic2BitsMUL_sch.sch  TruthTable2BitsMUL.v  TruthTable2BitsMUL_summary.html  TruthTable2BitsMUL_tb.v  TruthTable2BitsMUL_tb_beh.prj  TruthTable2BitsMUL_tb_isim_beh.wdb  (+5 more)
semester-3/ASK/: .gitignore
semester-3/Algorithms 2/Kruskals_Algoirithm/: 53855.algo2.lab08.main.cpp  CMakeLists.txt  DynamicArray.hpp  g1.dot  g2.dot  g4.txt  main.cpp
semester-3/Algorithms 2/Kruskals_Algoirithm/include/opencv2/: cvconfig.h
semester-4/PIAD/: lab06.ipynb  lab07.ipynb  lab08.ipynb  lab0910.ipynb  lab1.ipynb  lab11.ipynb  lab2lab3.ipynb  lab5.ipynb
semester-4/ZI/: lab01 tworzenie przykladowej BD.md  lab05 lączenie tabel.md  lab06 podzapytania i filtrowanie.md  lab07 funckje matematyczne i op. arytmetyczne.md  lab08 funkcje tekstowe i warunkowe.md  lab13 tansakcje.md  lab14 xml i json.md
semester-4/data-analysis/: lab06.ipynb  lab08.ipynb  lab4.ipynb  lab5.ipynb
semester-4/databases/: lab02 modyfikcja i edycja BD.md  lab03 zapytania proste.md  lab04 grupowanie sortowanie.md  lab09 funkcji daty i czasu.md  lab10 widoki i indeksy.md  lab11 funkcje skladowane.md  lab12 procedury+triggery.md
semester-4/graphics/Ray Tracing/: CMakeLists.txt  README.md
semester-4/graphics/Ray Tracing/3rd/glm/gtx/: intersect.inl
semester-4/graphics/Ray Tracing/3rd/opencv/: FindOpenCV.cmake
semester-4/graphics/Ray Tracing/src/: CImage.cpp  CRayTrace.cpp  CScene.cpp  main.cpp
semester-4/software-eng/: .gitignore  Dokumentacja projektu zaliczeniowego - IO.docx  Inż Oprogramowania notatki.odt  README.md  WIP -- Ceny klubów sportowych w Szczecinie.odt
semester-4/software-eng/IO_code/src/: Archiwum.h  Base.h  CMakeLists.txt  Grupa.cpp  Grupa.h  Harmonogram.cpp  Harmonogram.h  HarmonogramGrupy.h  HarmonogramTrenera.h  Kierownik.cpp  Kierownik.h  Klient.cpp  Klient.h  Konto.cpp  Konto.h  Platnosc.h  Post.cpp  Post.h  Pracownik.h  Rachunek.h  Raport.h  Structs.h  Trener.cpp  Trener.h  main.cpp  zmianaEnum.h
semester-5/AI/: .gitignore
semester-5/HMI/: .gitignore
semester-5/avr-bare-metal/: adc_led_controller.c  debounce_button.c  led_blink.asm  traffic_lights_timer_interrupt.c  usart_led_controller.c
(+1269 files in other folders)
